[gd_scene load_steps=3 format=3 uid="uid://dww5muvu8c87j"]

[ext_resource type="Script" path="res://modals/level_parameters_window.gd" id="1_st6e7"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0ppun"]

[node name="LevelParametersWindow" type="Window"]
auto_translate_mode = 1
title = "Level parameters"
initial_position = 1
size = Vector2i(600, 550)
transient = true
exclusive = true
min_size = Vector2i(600, 550)
script = ExtResource("1_st6e7")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Select sector environment"

[node name="LevelSetOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
selected = 0
item_count = 6
popup/item_0/text = "Set 1 - City"
popup/item_0/id = 1
popup/item_1/text = "Set 2 - Hills"
popup/item_1/id = 2
popup/item_2/text = "Set 3 - Nacht"
popup/item_2/id = 3
popup/item_3/text = "Set 4 - Ice"
popup/item_3/id = 4
popup/item_4/text = "Set 5 - Desert"
popup/item_4/id = 5
popup/item_5/text = "Set 6 - Myko"
popup/item_5/id = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Select movie"

[node name="MoviesOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
selected = 0
item_count = 12
popup/item_0/text = "none"
popup/item_1/text = "Intro"
popup/item_1/id = 1
popup/item_2/text = "Tutorial 1"
popup/item_2/id = 2
popup/item_3/text = "Tutorial 2"
popup/item_3/id = 3
popup/item_4/text = "Tutorial 3"
popup/item_4/id = 4
popup/item_5/text = "Ghorkov"
popup/item_5/id = 5
popup/item_6/text = "Taerkasten"
popup/item_6/id = 6
popup/item_7/text = "Mykonian"
popup/item_7/id = 7
popup/item_8/text = "Sulgogar"
popup/item_8/id = 8
popup/item_9/text = "Black sect"
popup/item_9/id = 9
popup/item_10/text = "Lose"
popup/item_10/id = 10
popup/item_11/text = "Win"
popup/item_11/id = 11

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Select event loop"

[node name="EventLoopOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
selected = 0
item_count = 4
popup/item_0/text = "none"
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Select level sky"

[node name="SkyOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 72
popup/item_0/text = "1998_01"
popup/item_1/text = "1998_02"
popup/item_1/id = 1
popup/item_2/text = "1998_03"
popup/item_2/id = 2
popup/item_3/text = "1998_05"
popup/item_3/id = 3
popup/item_4/text = "1998_06"
popup/item_4/id = 4
popup/item_5/text = "Am_1"
popup/item_5/id = 5
popup/item_6/text = "Am_2"
popup/item_6/id = 6
popup/item_7/text = "Am_3"
popup/item_7/id = 7
popup/item_8/text = "ARZ1"
popup/item_8/id = 8
popup/item_9/text = "ASKY2"
popup/item_9/id = 9
popup/item_10/text = "BRAUN1"
popup/item_10/id = 10
popup/item_11/text = "CT6"
popup/item_11/id = 11
popup/item_12/text = "H7"
popup/item_12/id = 12
popup/item_13/text = "H"
popup/item_13/id = 13
popup/item_14/text = "HAAMITT1"
popup/item_14/id = 14
popup/item_15/text = "HAAMITT4"
popup/item_15/id = 15
popup/item_16/text = "MOD2"
popup/item_16/id = 16
popup/item_17/text = "MOD4"
popup/item_17/id = 17
popup/item_18/text = "MOD5"
popup/item_18/id = 18
popup/item_19/text = "MOD7"
popup/item_19/id = 19
popup/item_20/text = "MOD8"
popup/item_20/id = 20
popup/item_21/text = "MOD9"
popup/item_21/id = 21
popup/item_22/text = "MODA"
popup/item_22/id = 22
popup/item_23/text = "MODB"
popup/item_23/id = 23
popup/item_24/text = "Nacht1"
popup/item_24/id = 24
popup/item_25/text = "NACHT2"
popup/item_25/id = 25
popup/item_26/text = "NEWTRY5"
popup/item_26/id = 26
popup/item_27/text = "NOSKY"
popup/item_27/id = 27
popup/item_28/text = "NT1"
popup/item_28/id = 28
popup/item_29/text = "NT2"
popup/item_29/id = 29
popup/item_30/text = "NT3"
popup/item_30/id = 30
popup/item_31/text = "NT5"
popup/item_31/id = 31
popup/item_32/text = "NT6"
popup/item_32/id = 32
popup/item_33/text = "NT7"
popup/item_33/id = 33
popup/item_34/text = "NT8"
popup/item_34/id = 34
popup/item_35/text = "NT9"
popup/item_35/id = 35
popup/item_36/text = "NTA"
popup/item_36/id = 36
popup/item_37/text = "S3_1"
popup/item_37/id = 37
popup/item_38/text = "S3_4"
popup/item_38/id = 38
popup/item_39/text = "SMOD1"
popup/item_39/id = 39
popup/item_40/text = "SMOD2"
popup/item_40/id = 40
popup/item_41/text = "SMOD3"
popup/item_41/id = 41
popup/item_42/text = "SMOD4"
popup/item_42/id = 42
popup/item_43/text = "SMOD5"
popup/item_43/id = 43
popup/item_44/text = "SMOD6"
popup/item_44/id = 44
popup/item_45/text = "SMOD7"
popup/item_45/id = 45
popup/item_46/text = "SMOD8"
popup/item_46/id = 46
popup/item_47/text = "STERNE"
popup/item_47/id = 47
popup/item_48/text = "wow1"
popup/item_48/id = 48
popup/item_49/text = "wow5"
popup/item_49/id = 49
popup/item_50/text = "wow7"
popup/item_50/id = 50
popup/item_51/text = "wow8"
popup/item_51/id = 51
popup/item_52/text = "wow9"
popup/item_52/id = 52
popup/item_53/text = "wowa"
popup/item_53/id = 53
popup/item_54/text = "wowb"
popup/item_54/id = 54
popup/item_55/text = "wowc"
popup/item_55/id = 55
popup/item_56/text = "wowd"
popup/item_56/id = 56
popup/item_57/text = "wowe"
popup/item_57/id = 57
popup/item_58/text = "wowf"
popup/item_58/id = 58
popup/item_59/text = "wowh"
popup/item_59/id = 59
popup/item_60/text = "wowi"
popup/item_60/id = 60
popup/item_61/text = "wowj"
popup/item_61/id = 61
popup/item_62/text = "x1"
popup/item_62/id = 62
popup/item_63/text = "x2"
popup/item_63/id = 63
popup/item_64/text = "x4"
popup/item_64/id = 64
popup/item_65/text = "x5"
popup/item_65/id = 65
popup/item_66/text = "x7"
popup/item_66/id = 66
popup/item_67/text = "x8"
popup/item_67/id = 67
popup/item_68/text = "x9"
popup/item_68/id = 68
popup/item_69/text = "xa"
popup/item_69/id = 69
popup/item_70/text = "xb"
popup/item_70/id = 70
popup/item_71/text = "xc"
popup/item_71/id = 71

[node name="SkyTexture" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("PlaceholderTexture2D_0ppun")

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Select music"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MusicOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
selected = 0
item_count = 6
popup/item_0/text = "none"
popup/item_1/text = "Track 2"
popup/item_1/id = 2
popup/item_2/text = "Track 3"
popup/item_2/id = 3
popup/item_3/text = "Track 4"
popup/item_3/id = 4
popup/item_4/text = "Track 5"
popup/item_4/id = 5
popup/item_5/text = "Track 6"
popup/item_5/id = 6

[node name="MusicButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Play"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Minimum break:"

[node name="MinBreakLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Maximum break:"

[node name="MaxBreakLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Save"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_cancel_button_pressed"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/SkyOptionButton" to="." method="_on_sky_option_button_item_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/SaveButton" to="." method="_on_save_button_pressed"]
